背景色と文字色が同じになっているのをとりあえず修正

--- a/StarryEyes/Views/WindowParts/InputArea.xaml
+++ b/StarryEyes/Views/WindowParts/InputArea.xaml
@@ -107,7 +107,7 @@
                 </i:EventTrigger>
             </i:Interaction.Triggers>
             <Button.ToolTip>
-                <TextBlock Foreground="White"><Run Text="{Binding AuthInfoScreenNames, Mode=OneWay}" />
+                <TextBlock><Run Text="{Binding AuthInfoScreenNames, Mode=OneWay}" />
                     <LineBreak /><Run Text="クリックすると変更することができます。" />
                 </TextBlock>
             </Button.ToolTip>
